[tool.poetry]
name = "base"
version = "0.1.0"
description = ""
authors = ["sinofseven <em.s.00001@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
boto3 = "==1.35.72"
boto3-stubs = {version = "1.35.72", extras = ["events", "s3", "ssm", "sns"]}
aws-cloudwatch-logs-url = "1.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
